--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^3.35.0",
     "@google-cloud/vertexai": "^1.9.3",
+    "express": "^4.21.2",
     "fs": "^0.0.1-security"
   }
 }
